# rws2016_pkumars

./: Astra_Setup_Ros
ASTRA_FILES/: Astra_Setup_Ros  ROS_Orbbecs.txt  permission_denies.gvfs.txt  ros.txt  teamviewer.txt
ASTRA_FILES/Camera Calibratioon/: Registration:_matching_depth_to_color.txt  astra_pro_depth.yaml  astra_pro_rgb.yaml~  calibration RGB.txt  calibration RGB.txt~  calibration depth.txt  calibration depth.txt~  extrinsic calibration.txt  rgb_Astra_Pro_Orbbec.yaml
ASTRA_FILES/astra pro/: Astra_Pro_Settings_offset  Depth_Camera_Parameters.txt  Depth_Camera_Parameters.txt~  RGB_Camera_Parameters.txt~  astra_video_mode.txt
astra_calibration_file/: depth_Astra_Orbbec.yaml  rgb_Astra_Orbbec.yaml
ball_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
ball_detection/launch/: ball.launch  ball_detection.launch  ball_detection_hand.launch
ball_detection/src/: CGrid_3D.cpp  CGrid_3D.h  CTrajectory.cpp  CTrajectory.h  LinearRegression.h  QuadraticRegression.cpp  QuadraticRegression.h  arm.cpp  ball.cpp  ball1.cpp  ball17.cpp  ball18.cpp  ball19.cpp  ball2.cpp  ball20.cpp  ball21.cpp  ball22.cpp  ball23.cpp  ball24.cpp  ball25.cpp  ball26.cpp  ball3.cpp  ball4.cpp  ball5.cpp  ballCord_transform.cpp  (+18 more)
hit_wall/: CMakeLists.txt  package.xml
player_pkumars/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vision_opencv/: CMakeLists.txt  CMakeLists.txt~  package.xml
vision_opencv/src/: CMakeLists.txt  Drawing_1.cpp  contour_pixel_count.cpp  load_image_and_display.cpp  play_video_from_file.cpp  play_video_from_webcam.cpp  webcam.cpp
(+23 files in other folders)
